# vla-data-forge

./: .gitignore  README.md  pyproject.toml
configs/backends/: gemini.yaml  openai.yaml  qwen.yaml
configs/curation/: interleaved.yaml
configs/datasets/: bridge_v2.yaml  embodied_cot.yaml
configs/generation/: default.yaml
scripts/: count_episodes.py  curate_interleaved.py  generate_traces.py  validate_dataset.py  visualize_bridge.py  visualize_curated.py  visualize_ecot.py
src/vla_curator/: __init__.py  config.py
src/vla_curator/backends/: __init__.py  base.py  gemini.py  openai_backend.py  qwen.py  registry.py
src/vla_curator/curation/: __init__.py  export.py  interleaver.py  rlds_export.py  validator.py
src/vla_curator/datasets/: __init__.py  base.py  bridge_v2.py  embodied_cot.py
src/vla_curator/generation/: __init__.py  pipeline.py  prompt_builder.py  response_parser.py  trace_postprocessor.py
src/vla_curator/schemas/: __init__.py  base.py  bridge_v2.py  embodied_cot.py  interleaved.py  modalities.py
src/vla_curator/utils/: __init__.py  io.py  logging.py  rate_limiter.py
src/vla_curator/visualization/: __init__.py  bridge_viewer.py  frame_viewer.py  trajectory_viewer.py
tests/: conftest.py  test_backends.py  test_bridge_loader.py  test_bridge_viewer.py  test_curation.py  test_generation.py  test_schemas.py
